# PaperMoon

./: .env.sample  Cargo.toml  LICENSE  README.md  docker-compose.yml  q
article/: test.html
migrations/2023-03-09-083737_create_posts/: down.sql  up.sql
src/: article.rs  converter.rs  cruds.rs  db.rs  error.rs  main.rs  models.rs  router.rs  schema.rs  watcher.rs
static/: index.js  style.css
templates/: article.html.tera  article_list.html.tera  base.html.tera
test/: test.html  test.md  test_another.md  test_untitled.md
