[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = {version = "1.0.69", futures = ["backtrace"]}
diesel = {version = "2.0.3", features = ["postgres", "chrono", "uuid", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
html-minifier = "4.0.0"
log = "0.4.17"
logger = "0.4.0"
notify = "5.1.0"
pulldown-cmark = "0.9.2"
tera = "1.17.1"
